--- a/src/app/assignment-dialog/assignment-dialog.component.html
+++ b/src/app/assignment-dialog/assignment-dialog.component.html
@@ -12,6 +12,6 @@
     </form>
 </div>
 <div mat-dialog-actions>
-    <button mat-button (click)="dialogRef.close()">Annuler</button>
+    <button mat-button (click)="onCancel()">Annuler</button>
     <button mat-button color="primary" (click)="onSubmit()">Ajouter</button>
 </div>
