--- a/src/app/auteur/auteur.component.css
+++ b/src/app/auteur/auteur.component.css
@@ -1,4 +1,3 @@
-
 .full-width-table {
     width: 100%;
 }
@@ -18,6 +17,7 @@
 .mat-mdc-card-content:last-child {
     padding-bottom: 118px;
 }
+
 .container {
     height: 85vh;
     display: flex;
@@ -26,8 +26,9 @@
 }
 
 .box {
-    max-width:50%;;
-    width: 100%;
+    max-width: 50%;
+    ;
+    width: 40%;
     max-height: 80vh;
 }
 
@@ -80,6 +81,14 @@ mat-card-title {
     border-radius: 0.25rem;
     text-align: center;
 }
+
 .delete-button {
     color: red;
-  }
+}
+
+.no-auteurs-message {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 16px;
+    color: gray;
+}
