--- a/src/app/matiere/matiere.component.html
+++ b/src/app/matiere/matiere.component.html
@@ -65,7 +65,7 @@
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let matiere">
-                            <button mat-icon-button (click)="deleteMatiere(matiere._id) " class="delete-button">
+                            <button mat-icon-button (click)="deleteMatiere(matiere._id)" class="delete-button">
                                 <mat-icon>delete</mat-icon>
                             </button>
                         </td>
@@ -74,6 +74,12 @@
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
+
+                <div class="pagination-buttons">
+                    <button mat-button (click)="previousPage()" [disabled]="currentPage === 1">Previous</button>
+                    <span>Page {{currentPage}} of {{totalPages}}</span>
+                    <button mat-button (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
+                </div>
             </ng-container>
             <ng-template #noMatieres>
                 <p class="no-matieres-message">Pas encore de matière insérée.</p>
