--- a/src/app/matiere/matiere.component.html
+++ b/src/app/matiere/matiere.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="20px">
+<div class="container" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
     <!-- Form Section -->
     <mat-card class="box" fxFlex="45%">
         <mat-card-header fxLayoutAlign="center center">
@@ -38,6 +38,7 @@
             <ng-container *ngIf="matieres.length > 0; else noMatieres">
                 <table mat-table [dataSource]="matieres" class="mat-elevation-z8 full-width-table">
 
+                    <!-- Colonnes de la table -->
                     <ng-container matColumnDef="nom">
                         <th mat-header-cell *matHeaderCellDef> Nom </th>
                         <td mat-cell *matCellDef="let matiere"> {{ matiere.nom }} </td>
@@ -75,6 +76,7 @@
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
 
+                <!-- Pagination -->
                 <div class="pagination-buttons">
                     <button mat-button (click)="previousPage()" [disabled]="currentPage === 1">Previous</button>
                     <span>Page {{currentPage}} of {{totalPages}}</span>
