--- a/src/app/auteur/auteur.component.css
+++ b/src/app/auteur/auteur.component.css
@@ -91,3 +91,9 @@ mat-card-title {
     font-size: 16px;
     color: gray;
 }
+.pagination-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+  }
