--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -77,6 +77,7 @@ td {
 
 .example-header-image-round img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -100,8 +101,7 @@ td {
 
 .example-header-image-round-right img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .cards-container {
